--- a/table.html
+++ b/table.html
@@ -47,8 +47,8 @@
 				</tr>
 				<tr>
 					<td> baris 3 kolom 1</td>
-					<td></td>
-					<td></td>
+					<td>baris 3 kolom 2</td>
+					<td>beris 3 kolom 3</td>
 				</tr>
 			</tbody>
 		</table>
